@@ -683,6 +683,7 @@ var_type Mission::vartypeFromString(string type){
 
 void Mission::saveVariables(const ostream& out){
 
+  var_out << "<!-- saved variables generated by Vegastrike -->" << endl << endl;
   
   var_out << "<saved-variables>" << endl << endl;
 
